fixed random white space on right side in mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -29,7 +29,6 @@
   gap: 2rem;
   position: relative;
   z-index: 2;
-  /* margin: 0 auto; */
 }
 
 .LinkBar {
@@ -40,6 +39,7 @@
   z-index: 1000;
   display: flex;
   align-items: center;
+  /* outline: 1px solid red; */
 }
 
 .header-container h1 {
@@ -55,11 +55,11 @@
 
 @media only screen and (max-width: 768px) {
   .header {
-    width: 80vw;
+    width: 100%;
   }
 
   .header-container {
-    width: 80vw;
+    width: 90%;
   }
 
   .header-container h1 {
